docs: add api docs delete and add
